--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,6 +30,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+    - name: Clean Build Artifacts
+      run: |
+        rm -rf build dist *.egg-info
     - name: Build package
       run: python -m build
     - name: Publish package
